# blog

./: .editorconfig  .gitignore  CNAME  README.md  atom-one-dark.css  bowser.js  build.pl  circle.yml  dystopia.pl  index.css  index.html  index.js  normalize.css  watch.js
haskell/: how_to_install.html  how_to_install.md
haskell/esoteric/: 1-traverse.html
iidx/: tips.html
pandoc-custom/: pandoc-custom.cabal  stack.yaml
pandoc-custom/app/: HTML.hs  ImageSize.hs  Main.hs  Translation.hs  WritersShared.hs
posts/: index.md
posts/haskell/: how_to_install.md
posts/haskell/esoteric/: 1-traverse.md
posts/history/: 2021-12-03T04.md
posts/iidx/: tips.md
posts/purescript/: dive-into-purescript-1-getting-started.md
posts/test/: code.md  lists.md  markdown.md  mathml.md  sqrt2.md  tables.md
posts/web/: a11y.md
purescript/: dive-into-purescript-1-getting-started.html
src/: bowser.js  highlight.js  index.css  index.js  index.styl  template.html
test/: code.html  lists.html  markdown.html  mathml.html  sqrt2.html  tables.html
web/: a11y.html
