name:                pandoc-custom
version:             0.1.0.0
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pandoc-custom
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -fno-warn-unused-do-bind
  build-depends:       base
                     , text
                     , containers
                     , pandoc
                     , pandoc-types
                     , filepath
                     , directory
                     , safe
                     , filemanip >0.3.5
                     , blaze-html >=0.8
                     , blaze-markup >=0.7
                     , bytestring
                     , HTTP
                     , network-uri
                     , texmath
                     , xml
                     , mtl
                     , aeson
                     , binary >=0.8
                     , data-default
                     , unordered-containers
                     , utf8-string
  default-language:    Haskell2010
